--- a/WebDesign/CSS/Assignment_1.html
+++ b/WebDesign/CSS/Assignment_1.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <title>Document</title>
+    <title>Assignment 1</title>
   </head>
   <body>
     <div class="main1">
@@ -166,18 +166,18 @@
             <div class="title-bg-color"><h4>Dramatically Engage</h4></div>
             <div>
               <div class="progress-bar">
-                <div class="progress-100 color-green">
+                <div class="progress-100 ">
                   100% Proactively Envisioned
                 </div>
               </div>
               <div class="progress-bar">
-                <div class=" progress-80 color-blue">80% Objectively Innovated</div>
+                <div class=" progress-80 ">80% Objectively Innovated</div>
               </div>
               <div class="progress-bar">
-                <div class="progress-45 color-orange">45% Portalled</div>
+                <div class="progress-45 ">45% Portalled</div>
               </div>
               <div class="progress-bar">
-                <div class=" progress-35 color-red">35% Done</div>
+                <div class=" progress-35 ">35% Done</div>
               </div>
             </div>
           </div>
