--- a/WebDesign/CSS/Assignment_1.html
+++ b/WebDesign/CSS/Assignment_1.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <script src="https://kit.fontawesome.com/67cc0cfcdf.js" crossorigin="anonymous"></script>
     <title>Assignment 1</title>
   </head>
   <body>
@@ -16,7 +17,7 @@
       <div class="navbar">
         <div class="navbar-items">
           <div class="navbar-items-left">
-            <span><i class="fa fa-globe"></i> Logo</span>
+            <span><i class="fas fa-globe-europe"></i> Logo</span>
             <a href="#" class="navbar-links a-hover">Home</a>
             <a href="#" class="navbar-links a-hover">About</a>
             <a href="#" class="navbar-links a-hover">Products</a>
@@ -42,7 +43,7 @@
       <div class="main">
         <div class="column-one-fourth">
           <div class="row-one">
-            <div class="title-bg-color"><h4>Completely Synergize</h4></div>
+            <div class="title-bg-color"> <h4><i class="fas fa-random"></i> Completely Synergize</h4></div>
             <div><p>Resource Taxing</p></div>
             <hr />
             <div class="premier-niche-market-btn-new">
@@ -58,7 +59,7 @@
             <div><p>Proactively Envisioned</p></div>
           </div>
           <div class="row-one top-margin-10">
-            <div class="title-bg-color"><h4>Dramatically Engage</h4></div>
+            <div class="title-bg-color"><h4> <i class="fas fa-cog"></i> Dramatically Engage</h4></div>
             <div>
               <p>
                 Objectively Innovate empowered manufactured Products whereas
@@ -97,11 +98,12 @@
                 potentialities.
               </p>
               <div>
-                <div class="comments-shares text-blue">
-                  <strong>2 Comments</strong>
+                
+                <div class="comments-shares color-comments-shares">
+                  <strong><i class="fas fa-comment-alt"></i> 2 Comments</strong>
                 </div>
-                <div class="comments-shares text-blue">
-                  <strong>8 Shares</strong>
+                <div class="comments-shares color-comments-shares">
+                  <strong><i class="fas fa-share-square"></i> 8 Shares</strong>
                 </div>
               </div>
             </div>
@@ -121,11 +123,11 @@
                    multimedia based expertise and cross-media growth strategies.
               </p>
               <div>
-                <div class="comments-shares text-blue">
-                  <strong>12 Comments</strong>
+                <div class="comments-shares color-comments-shares">
+                  <strong><i class="fas fa-comment-alt"></i> 12 Comments</strong>
                 </div>
-                <div class="comments-shares text-blue">
-                  <strong> 18 Shares</strong>
+                <div class="comments-shares color-comments-shares">
+                  <strong><i class="fas fa-share-square"></i> 18 Shares</strong>
                 </div>
               </div>
             </div>
@@ -145,11 +147,11 @@
                    for state of the art customer service:
               </p>
               <div>
-                <div class="comments-shares text-blue">
-                  <strong>23 Comments</strong>
+                <div class="comments-shares color-comments-shares">
+                  <strong><i class="fas fa-comment-alt"></i> 23 Comments</strong>
                 </div>
-                <div class="comments-shares text-blue">
-                  <strong>22 Shares</strong>
+                <div class="comments-shares color-comments-shares">
+                  <strong><i class="fas fa-share-square"></i> 22 Shares</strong>
                 </div>
               </div>
             </div>
@@ -160,10 +162,10 @@
         <div class="column-one-fourth">
           <div class="search-block">
             <input type="text" class="input-text-1290"/>
-            <button class="btn-search">Search</button>
+            <button class="btn-search"><i class="fa fa-search"></i> Search</button>
           </div>
           <div class="row-one top-margin-10">
-            <div class="title-bg-color"><h4>Dramatically Engage</h4></div>
+            <div class="title-bg-color"><h4><i class='fas fa-pager'></i> Dramatically Engage</h4></div>
             <div>
               <div class="progress-bar">
                 <div class="progress-100 ">
@@ -182,7 +184,7 @@
             </div>
           </div>
           <div class="row-one top-margin-10">
-            <div class="title-bg-color"><h4>Active Predomination</h4></div>
+            <div class="title-bg-color"><h4> <i class="fas fa-bullhorn"></i> Active Predomination</h4></div>
             <div>
               <p>
                 Proactively envisioned multimedia based expertise and
@@ -200,7 +202,7 @@
 
       <div class="lower-block">
         <div class="lower-block-column">
-          <div><h3>Dynamic</h3></div>
+          <div><h3><span class="small-T-icon" >T</span><span class="large-T-icon">T</span> Dynamic</h3></div>
           <div>
             <p>
               Collaboratively administrate empowered Markets via plug-and-play
@@ -213,7 +215,7 @@
         </div>
 
         <div class="lower-block-column">
-          <div><h3>Efficient</h3></div>
+          <div><h3> <i class="fas fa-wrench"></i> Efficient</h3></div>
           <div>
             <p>
               Dramatically maintain click-and-mortar solutions without
@@ -226,7 +228,7 @@
         </div>
 
         <div class="lower-block-column">
-          <div><h3>Complete</h3></div>
+          <div><h3> <i class="fas fa-paperclip"></i> Complete</h3></div>
           <div>
             <p>
               Professionally cultivate one-to-one customer service with robust
@@ -239,16 +241,16 @@
         </div>
 
         <div class="lower-block-column">
-          <div> <h3>Phosfluorescent</h3></div>
+          <div> <h3 > <i class="fas fa-camera"></i> Phosfluorescent</h3></div>
           <div">
             <div class="lower-block-column-last">
               <div class="box-110-80">110x80</div>
               <div class="box-110-80">110x80</div>
              </div>
 
-             <div class="lower-block-column-last">
-              <div class="box-110-80">110x80</div>
-              <div class="box-110-80">110x80</div>
+             <div class="lower-block-column-last margin-bottom-10 ">
+              <div class="box-110-80 ">110x80</div>
+              <div class="box-110-80 ">110x80</div>
              </div>
            </div>
           </div>
