--- a/WebDesign/reactJS/assignment_1/public/index.html
+++ b/WebDesign/reactJS/assignment_1/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="employeeLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -36,7 +36,7 @@
       integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7"
       crossorigin="anonymous"
     />
-    <title>React App</title>
+    <title>Employee Records</title>
   </head>
   <body >
     <noscript>You need to enable JavaScript to run this app.</noscript>
